@@ -1,6 +1,7 @@
 {
-  "auth" : "cpan:JFORGET",
-  "authors": [
+  "api"     : "0",
+  "auth"    : "zef:jforget",
+  "authors" : [
     "Jean Forget"
   ],
   "build-depends": [
@@ -22,7 +23,7 @@
   ],
   "source-url" : "https://github.com/jforget/raku-Date-Calendar-Bahai.git",
   "support" : {
-    "email" : "JFORGET@cpan.org"
+    "email" : "J2N-FORGET@orange.fr"
   },
   "tags": [
       "date"
