@@ -3,7 +3,7 @@
 #
 # Generate test data for the Bahai calendar class
 #
-# Copyright (C) 2021, Jean Forget, all rights reserved
+# Copyright (C) 2021, 2024, Jean Forget, all rights reserved
 #
 # This library is free software; you can redistribute it and/or modify
 # it under the Artistic License 2.0.
